--- a/src/App.css
+++ b/src/App.css
@@ -1,51 +1,48 @@
 
 body {
-    background-color:bisque;
+  background-color: black;
 }
-
-
 
 /* hero img */
 .hero-img {
-    display: flex;
-    justify-content: center;
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  height: 100%;
 }
-
 
 /* header styles */
 
 .header-container {
-    display: flex;
-    gap: 50px;
-    color: white;
-    background-color: darkslategray;
-    
+  display: flex;
+  justify-content: space-between;
+  gap: 1px;
+  color: white;
+  background-color: darkslategray;
 }
 
 .header-menu {
-    display: flex;
-    width: 80%;
-    justify-content: flex-end;
-    gap: 100px;
-    list-style: none;
+  display: flex;
+  width: 50%;
+  justify-content: flex-end;
+  gap: 10px;
+  list-style: none;
 }
 
 /* barber-cards */
 
 .barber-cards {
-    display: flex;
-    gap: 3px;
-    justify-content: center;
-    
+  display: flex;
+  gap: 10px;
+  justify-content: center;
 }
 
 .card-image {
-    width: 25%;
-    height: 25%;
+  width: 25%;
+  height: 25%;
 }
 
 .card-image-tools {
-    width: 10%;
-    
+  width: 10%;
 }
