--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 body {
   background-color: black;
 }
@@ -16,16 +15,19 @@ body {
 
 .header-container {
   display: flex;
-  justify-content: space-between;
-  gap: 1px;
+  justify-content: space-around;
   color: white;
   background-color: darkslategray;
 }
 
+.header-title {
+  margin-left: 20px;
+}
+
 .header-menu {
   display: flex;
-  width: 50%;
   justify-content: flex-end;
+  margin-right: 30px;
   gap: 10px;
   list-style: none;
 }
@@ -34,7 +36,7 @@ body {
 
 .barber-cards {
   display: flex;
-  gap: 10px;
+  gap: 5px;
   justify-content: center;
 }
 
