--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=PT+Serif:ital@1&display=swap');
+
 body {
   background-color: black;
 }
@@ -10,53 +13,3 @@ li {
   list-style: none;
 }
 
-/* hero img */
-.hero-img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 100%;
-  height: 100%;
-}
-
-/* header styles */
-
-.header-container {
-  display: flex;
-  justify-content: space-around;
-  color: white;
-  background-color: darkslategray;
-}
-
-.header-title {
-  margin-left: 20px;
-}
-
-.header-list {
-  display: flex;
-  justify-content: space-around;
-  gap: 20px;
-  margin-right: 10px;
-}
-
-.nav-item {
-  color: inherit;
-  text-decoration: inherit;
-}
-
-/* barber-cards */
-
-.barber-cards {
-  display: flex;
-  gap: 5px;
-  justify-content: center;
-}
-
-.card-image {
-  width: 25%;
-  height: 25%;
-}
-
-.card-image-tools {
-  width: 10%;
-}
