--- a/src/components/barbers.css
+++ b/src/components/barbers.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(1fr);
+  margin-left: 20px;
   gap: 20px;
 }
 
@@ -51,4 +52,5 @@ h3 {
 
 .profile-pic {
   width: 25%;
+  border-radius: 10px;
 }
