--- a/src/components/about.css
+++ b/src/components/about.css
@@ -3,13 +3,12 @@ p {
   font-family: "PT Serif", serif;
   font-size: small;
   margin-top: 10px;
-  margin-right: 10px;;
+  margin-right: 10px;
 }
 
 .about-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  
 }
 
 .about-img {
@@ -22,4 +21,20 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.about-img2 {
+  width: 75%;
+  margin-top: 50px;
+  border-radius: 10px;
+  grid-row-start: 2;
+  grid-column-start: 3;
+}
+
+.about-p2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-row-start: 2;
+  grid-column: 2;
 }
