--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -6,7 +6,7 @@
     margin-top: 100px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 3fr;
+    grid-template-rows: auto;
 }
 
 .telephone-container, .chat-container, .form-container {
@@ -19,3 +19,28 @@
     grid-column-start: 2;
 }
 
+.book-button {
+    height: 50px;
+    width: auto;
+    grid-column-start: 3;
+    grid-row-start: 1;
+}
+
+.contact-info {
+    grid-column-start: 3;
+    grid-row-start: 2;
+}
+
+.phone-details-container {
+    display: flex;
+}
+
+.email-details-container {
+    display: flex;
+}
+
+.opening-time-container {
+    border: 1px;
+    border-style: solid;
+    border-color: white;
+}
