--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -1,11 +1,13 @@
 .mobile-pic, .mail-pic {
-    width: 20%;
+    width: 25%;
 }
 
 .contact-container {
-    margin-top: 100px;
+    margin-top: 70px;
+    margin-right: 20px;
+    gap: 20px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 150px auto;
     grid-template-rows: auto;
 }
 
