--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -1,9 +1,9 @@
 .mobile-pic {
-  width: 15%;
+  width: 40%;
 }
 
 .mail-pic {
-  width: 15%;
+  width: 50%;
 }
 
 .contact-container {
@@ -12,15 +12,12 @@
   gap: 20px;
   display: grid;
   place-items: center;
-  grid-template-columns: 150px auto;
+  grid-template-columns:  auto;
   grid-template-rows: auto;
 }
 
-.telephone-container,
-.chat-container,
-.form-container {
-  display: grid;
-  place-items: center;
+.contact-info {
+    grid-column-start: 4;
 }
 
 .opening-hours {
@@ -29,7 +26,29 @@
 }
 
 .button-container {
-    grid-column-start: 3;
+    grid-column-start: 4;
+    justify-content: center;
+}
+.phone-details-container {
+    display: grid;
+    grid-template-columns: 2;
+}
+
+.mobile-number {
+    grid-column-start: 2;
+}
+
+.email-details-container {
+    display: grid;
+    grid-template-columns: 2;
+}
+
+.email-address {
+    grid-column-start: 2;
+}
+
+.small-address {
+    display: flex;
     justify-content: center;
 }
 
@@ -38,21 +57,6 @@
   align-items: center;
   height: 50px;
   width: 100px;
-}
-
-.contact-info {
-  grid-column-start: 3;
-  grid-row-start: 2;
-}
-
-.phone-details-container {
-  display: flex;
-  justify-content: space-around;
-}
-
-.email-details-container {
-  display: flex;
-  justify-content: space-around;
 }
 
 .opening-time-container {
