--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -9,15 +9,22 @@
 .contact-container {
   margin-top: 70px;
   margin-right: 20px;
-  gap: 20px;
+  gap: 5px;
   display: grid;
   place-items: center;
-  grid-template-columns:  auto;
+  grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto;
 }
 
+.main-map {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 4;
+}
+
 .contact-info {
-    grid-column-start: 4;
+  grid-column-start: 4;
 }
 
 .opening-hours {
@@ -26,37 +33,62 @@
 }
 
 .button-container {
-    grid-column-start: 4;
-    justify-content: center;
+  grid-column-start: 4;
+  justify-content: center;
 }
 .phone-details-container {
-    display: grid;
-    grid-template-columns: 2;
+  display: grid;
+  grid-template-columns: 2;
 }
 
 .mobile-number {
-    grid-column-start: 2;
+  grid-column-start: 2;
 }
 
 .email-details-container {
-    display: grid;
-    grid-template-columns: 2;
+  display: grid;
+  grid-template-columns: 2;
 }
 
 .email-address {
-    grid-column-start: 2;
+  grid-column-start: 2;
 }
 
 .small-address {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .book-button {
-  display: flex;
-  align-items: center;
-  height: 50px;
-  width: 100px;
+  border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+
+}
+
+.book-button span:after {
+  content: '\00bb';
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.book-button:hover span {
+  padding-right: 25px;
+}
+
+.book-button:hover span:after {
+  opacity: 1;
+  right: 0;
 }
 
 .opening-time-container {
@@ -74,6 +106,6 @@
 }
 
 a:link {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
