--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,11 +1,8 @@
 /* hero img */
-.hero-img {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 100%;
-    height: 100%;
-  }
+.hero1 {
+  width: 100%;
+  height: auto;
+}
   
   /* barber-cards */
   
@@ -24,6 +21,7 @@
   
   .card-image-tools {
     width: 10%;
+    border-radius: 10px;
   }
   
 .home-p {
@@ -32,3 +30,4 @@
     align-items: center;
     margin: 20px;
 }
+
